// This file is part of scarab.


syntax = "proto3";
option go_package = "github.com/tcolgate/scarab/scarab";

package scarab;

import 'scarab-common.proto'; // import scarab job arg definitions

message ListJobsRequest {
}

message ListJobsResponse {
  repeated scarab.Job jobs = 1;
}

message ListProfilesRequest {
}

message ListProfilesResponse {
  repeated scarab.RegisteredProfile registered = 1;
}

message WatchActiveJobsRequest {
}

message WatchActiveJobsResponse {
}

message StopJobRequest {
  string id = 1;
}

message StopJobResponse {
}

service ManagerUI {
  rpc StartJob (scarab.StartJobRequest) returns (scarab.StartJobResponse) {};
  rpc StopJob (scarab.StopJobRequest) returns (scarab.StopJobResponse) {};
  rpc ListProfiles (ListProfilesRequest) returns (ListProfilesResponse) {};
  rpc ListJobs (ListJobsRequest) returns (ListJobsResponse) {};
  rpc WatchActiveJobs (WatchActiveJobsRequest) returns (stream WatchActiveJobsResponse) {};
}

